# ChangeLog for www-client/chromium
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.929 2013/08/13 16:17:25 phajdan.jr Exp $

*chromium-30.0.1588.0 (13 Aug 2013)

  13 Aug 2013; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  -chromium-30.0.1568.0.ebuild, +chromium-30.0.1588.0.ebuild,
  chromium-9999-r1.ebuild:
  Dev channel bump. Fix bug #479418 by floppym. Fix bug #473260 by Vladimir.
  Exclude a failing test (bug #478168). Stop using system mesa. Temporarily use
  bundled openssl. Remove old.

  11 Aug 2013; Alexis Ballier <aballier@gentoo.org>
  chromium-28.0.1500.71.ebuild, chromium-28.0.1500.89.ebuild,
  chromium-28.0.1500.95.ebuild, chromium-29.0.1547.32.ebuild,
  chromium-29.0.1547.41.ebuild, chromium-30.0.1568.0.ebuild,
  chromium-30.0.1581.2.ebuild, chromium-9999-r1.ebuild:
  depend on ffmpeg:0

*chromium-29.0.1547.41 (09 Aug 2013)

  09 Aug 2013; Mike Gilbert <floppym@gentoo.org> +chromium-29.0.1547.41.ebuild,
  -chromium-29.0.1547.22.ebuild, chromium-30.0.1581.2.ebuild,
  chromium-9999-r1.ebuild:
  Beta channel bump. Tweak src_test to output each failed test command.

  31 Jul 2013; Mike Gilbert <floppym@gentoo.org> chromium-9999-r1.ebuild:
  Apply src_test change to live ebuild.

  31 Jul 2013; Mike Gilbert <floppym@gentoo.org> chromium-29.0.1547.32.ebuild,
  chromium-30.0.1581.2.ebuild:
  Adjust src_test so that we always run all tests instead of dying on the first
  failure.

*chromium-30.0.1581.2 (31 Jul 2013)

  31 Jul 2013; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  +files/chromium-system-icu-r0.patch, +files/chromium-system-ply-r0.patch,
  +chromium-30.0.1581.2.ebuild, chromium-9999-r1.ebuild:
  Dev channel bump.

  31 Jul 2013; Agostino Sarubbo <ago@gentoo.org> chromium-28.0.1500.95.ebuild:
  Stable for x86, wrt bug #479048

  31 Jul 2013; Agostino Sarubbo <ago@gentoo.org> chromium-28.0.1500.95.ebuild:
  Stable for amd64, wrt bug #479048
